cluster/apps/gitlab/gitlab/postgres/networkpolicies/giminio-ingress-gitlab-postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-gitlab-postgres
  namespace: minio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-psql
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
